# OpenChessMate

./: .gitignore  OpenChess.ino  README.md  chess_bot.cpp  chess_bot.h  chess_moves.cpp  chess_moves.h  sensor_test.cpp  wifi_manager.cpp  wifi_manager.h  wifi_manager_esp32.cpp  wifi_manager_esp32.h
.github/: copilot-instructions.md
.github/workflows/: pages.yml  release.yml
docs/: content.json  flash.html  manifest.json  script.js
src/: board_driver.cpp  board_driver.h  chess_bot.cpp  chess_bot.h  chess_common.cpp  chess_common.h  chess_engine.cpp  chess_engine.h  chess_game.cpp  chess_game.h  chess_lichess.cpp  chess_lichess.h  chess_moves.cpp  chess_moves.h  chess_utils.cpp  chess_utils.h  led_colors.h  lichess_api.cpp  main.cpp  move_history.h  ota_updater.cpp  ota_updater.h  sensor_test.cpp  stockfish_api.cpp  stockfish_api.h  stockfish_settings.h  ui_comm.cpp  ui_comm.h  web_pages.cpp  wifi_manager.cpp  wifi_manager_esp32.cpp  wifi_manager_esp32.h
src/web/: board-view.html  board.html  game.html  index.html  styles.css
src/web/css/: styles.css
ui_slave/: README.md  lv_conf.h  platformio.ini
ui_slave/boards/: BOARD_VIEWE_UEDX80480043E_WB_A.json
ui_slave/sim/: README.md  app.js  index.html  master_emulator.py  styles.css
ui_slave/sim_lvgl/: CMakeLists.txt  README.md  main.cpp
ui_slave/sim_lvgl/include/: lv_conf.h
ui_slave/src/: chess_ui.cpp  chess_ui.h  lvgl_v8_port.cpp  lvgl_v8_port.h  main.cpp
ui_slave/src/fonts/: open_chess_font_32.c
ui_slave/src/pieces/: bB.c  bK.c  bN.c  bP.c  bQ.c  bR.c  convert_v8.py  pieces.h  wB.c  wK.c  wN.c  wP.c  wQ.c  wR.c
